test/integration/good/tuples/tuple-ix-assign2.stan
transformed data {
  tuple(array[10] int, int) x;
  x.1[1] = 5;
}
